--- a/storyvord/requirements.txt
+++ b/storyvord/requirements.txt
@@ -46,10 +46,14 @@ geonamescache==2.0.0
 google-api-core==2.19.1
 google-auth==2.30.0
 google-cloud-core==2.4.1
+google-cloud-secret-manager==2.11.0
 google-cloud-storage==2.17.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.1
 googleapis-common-protos==1.63.2
+grpc-google-iam-v1==0.13.1
+grpcio==1.64.1
+grpcio-status==1.64.1
 gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
@@ -77,7 +81,7 @@ parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
 pika==1.3.2
-pillow==10.3.0
+pillow==10.4.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
 proto-plus==1.24.0
