--- a/storyvord/requirements.txt
+++ b/storyvord/requirements.txt
@@ -4,6 +4,7 @@ anyio==4.4.0
 asgiref==3.8.1
 astroid==3.2.2
 asttokens==2.4.1
+async-timeout==4.0.3
 attrs==23.2.0
 azure-core==1.30.2
 azure-storage-blob==12.20.0
@@ -13,6 +14,8 @@ cachetools==5.3.3
 celery==5.4.0
 certifi==2024.6.2
 cffi==1.16.0
+channels==4.1.0
+channels-redis==4.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
@@ -32,6 +35,7 @@ django-dotenv==1.4.2
 django-environ==0.11.2
 django-extensions==3.2.3
 django-filter==24.2
+django-model-utils==4.3.1
 django-rest-swagger==2.2.0
 django-storages==1.14.3
 django-templated-mail==1.1.1
@@ -71,6 +75,7 @@ kombu==5.3.7
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
 mccabe==0.7.0
+msgpack==1.0.8
 mypy-extensions==1.0.0
 numpy==2.0.0
 oauthlib==3.2.2
@@ -105,6 +110,7 @@ python-dotenv==1.0.1
 python3-openid==3.2.0
 pytz==2024.1
 PyYAML==6.0.1
+redis==5.0.8
 referencing==0.35.1
 requests==2.32.3
 requests-oauthlib==2.0.0
