--- a/storyvord/requirements.txt
+++ b/storyvord/requirements.txt
@@ -6,6 +6,8 @@ astroid==3.2.2
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.2.0
+autobahn==24.4.2
+Automat==24.8.1
 azure-core==1.30.2
 azure-storage-blob==12.20.0
 billiard==4.2.0
@@ -22,9 +24,11 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+constantly==23.10.4
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==42.0.8
+daphne==4.1.2
 decorator==5.1.1
 defusedxml==0.8.0rc2
 dill==0.3.8
@@ -62,7 +66,9 @@ gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
+hyperlink==21.0.0
 idna==3.7
+incremental==24.7.2
 inflection==0.5.1
 isodate==0.6.1
 isort==5.13.2
@@ -116,6 +122,7 @@ requests==2.32.3
 requests-oauthlib==2.0.0
 rpds-py==0.18.1
 rsa==4.9
+service-identity==24.1.0
 simplejson==3.19.2
 six==1.16.0
 sniffio==1.3.1
@@ -127,6 +134,8 @@ tomli==2.0.1
 tomlkit==0.12.5
 tqdm==4.66.4
 traitlets==5.14.3
+Twisted==24.7.0
+txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
@@ -134,3 +143,4 @@ urllib3==2.2.2
 vine==5.1.0
 wcwidth==0.2.13
 whitenoise==6.7.0
+zope.interface==7.0.3
